--- a/src/components/github/github.css
+++ b/src/components/github/github.css
@@ -7,7 +7,7 @@
 }
 
 .tab-container {
-    padding: 10px;
+    padding: 15px;
 }
 
 .tab.active {
@@ -30,4 +30,12 @@
 
 .tab:hover {
     background-color: aqua;
+}
+
+.form-input {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5px;
+    padding: 3px;
+    display: block;
 }
