--- a/src/components/github/github.css
+++ b/src/components/github/github.css
@@ -149,3 +149,15 @@ span.second-profile-legend {
     background-color: #FC6868;
     margin: auto;
 }
+
+.years-container {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 5px;
+    background-color: #eaeaea;
+    border-radius: 10px;
+    border: 1px solid gray;
+    max-width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+}
