--- a/src/components/github/github.css
+++ b/src/components/github/github.css
@@ -154,16 +154,14 @@ span.second-profile-legend {
     background-color: #eaeaea;
     border-radius: 10px;
     border: 1px solid gray;
-    max-width: 150px;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 200px;
+    margin-left: auto !important;
+    margin-right: auto !important;
 }
-
 .year-btn {
     color: black;
     border:0.1em solid black;
     background-color: #FC6868;
-    margin: 5px;
     border-radius: 5px;
     cursor:pointer;
     padding: 10px;
