--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ code {
 }
 
 .sidebar {
+  border: 1px solid grey;
+  border-radius: 10px;
   max-width: 20%;
   position: fixed;
   z-index: 1;
@@ -27,4 +29,62 @@ code {
 .github-img {
   max-width: 70;
   max-height: 70px;
+}
+
+.main-content a {
+  color: #FC6868 !important;
+  font-weight: bold;
+}
+
+.main-content a:hover {
+  text-decoration: none !important;
+  color: #CA5353 !important;
+}
+
+.sidebar a {
+  color: #FC6868 !important;
+  font-weight: bold;
+}
+
+.sidebar a:hover {
+  text-decoration: none !important;
+  color: #CA5353 !important;
+}
+
+p.paragraph {
+  width: 80%;
+  margin: auto;
+  cursor: default;
+}
+
+.center {
+  text-align: center;
+}
+
+.hidden {
+  display: none;
+}
+
+.nav-link-container {
+  padding: 15px;
+  display: inline-block;
+  line-height: 20px;
+}
+
+.nav-link {
+  padding: 10px;
+  color: #FC6868;
+  border: 1px solid transparent;
+  border-radius: 5px;
+}
+
+.nav-link:hover {
+  color: #CA5353;
+  text-decoration: none !important;
+  border: 1px solid #CA5353;
+}
+
+.nav-link:visited {
+  color: #CA5353;
+  text-decoration: none !important;
 }
