--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-@import '//codepen.io/chrisdothtml/pen/ojLzJK.css';
 .social-btns .btn,
 .social-btns .btn:before,
 .social-btns .btn .fa {
@@ -108,9 +107,20 @@ code {
 }
 
 .footer-container {
+  padding: 10px;
   width: 100%;
   background-color: #dddddd;
-  height: 200px;
+  height: 300px;
+}
+
+.footer-container .contacts {
+  margin-left: 50px;
+  display: inline-block;
+  margin-top: 10px !important;
+}
+
+ul.unstyled {
+  list-style-type: none
 }
 
 img.home-image {
