--- a/src/components/github/github.css
+++ b/src/components/github/github.css
@@ -161,3 +161,83 @@ span.second-profile-legend {
     color: white;
     border:0.1em solid white;
 }
+
+.repo-wrapper {
+    max-width: 200px;
+    margin: auto;
+}
+
+.user-link a {
+    position: relative;
+    display: inline-block;
+    outline: none;
+    color: #aaa;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 400;
+    text-shadow: 0 0 1px rgba(255, 255, 255, 0.3);
+    font-size: 1em;
+}
+
+.user-link a:hover,
+.user-link a:focus {
+    outline: none;
+}
+
+.user-link a span {
+    position: relative;
+    display: inline-block;
+    padding: 3px 15px 0;
+    background: black;
+    box-shadow: inset 0 3px #f2f2f2;
+    -webkit-transition: background 0.6s;
+    -moz-transition: background 0.6s;
+    transition: background 0.6s;
+    -webkit-transform-origin: 50% 0;
+    -moz-transform-origin: 50% 0;
+    transform-origin: 50% 0;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transform-origin: 0% 50%;
+    -moz-transform-origin: 0% 50%;
+    transform-origin: 0% 50%;
+}
+
+.user-link a span::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #FC6868;
+    color: white;
+    content: attr(data-hover);
+    -webkit-transform: rotateX(270deg);
+    -moz-transform: rotateX(270deg);
+    transform: rotateX(270deg);
+    -webkit-transition: -webkit-transform 0.6s;
+    -moz-transition: -moz-transform 0.6s;
+    transition: transform 0.6s;
+    -webkit-transform-origin: 0 0;
+    -moz-transform-origin: 0 0;
+    transform-origin: 0 0;
+    pointer-events: none;
+}
+
+.user-link a .blue::before {
+    background: #FC6868;
+}
+
+.user-link a:hover span,
+.user-link a:focus span {
+    background: #666666;
+}
+
+.user-link a:hover span::before,
+.user-link a:focus span::before {
+    -webkit-transform: rotateX(10deg);
+    -moz-transform: rotateX(10deg);
+    transform: rotateX(10deg);
+}
