--- a/src/components/github/Overview/css/overview.css
+++ b/src/components/github/Overview/css/overview.css
@@ -1,4 +1,5 @@
-.profile-container {
+.profile {
+    margin: 10px;
     border: 1px solid black;
     border-radius: 50px; 
     height: 400px;
@@ -8,10 +9,12 @@
 .details-container {
     border-radius: 30px;
     background-color: #aaaaaa;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .detail {
-    
+    margin-top: 5px;
 }
 
 .number-detail {
