Added graph to users.

--- a/src/components/github/Overview/css/overview.css
+++ b/src/components/github/Overview/css/overview.css
@@ -13,6 +13,18 @@
     padding-bottom: 5px;
 }
 
+.details-numbers-container {
+    display: inline-block;
+    width: 50%;
+    text-align: right;
+}
+
+.chart-wrapper {
+    display: inline-block;
+    width: 50%;
+    height: 100px;
+}
+
 .detail {
     margin-top: 5px;
 }
