--- a/src/components/github/Common/paging/paging.css
+++ b/src/components/github/Common/paging/paging.css
@@ -1,13 +1,12 @@
-span.page-container {
+.page-container {
     display: inline-block;
-    padding: 5px;
-    width: 20px;
-    height: 20px;
+    padding: 10px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     cursor: pointer;
-}
-
-.page-container a {
-    color: white;
     background-color: #FC6868;
+    color: white;
+    border: 1px solid black;
+    font-weight: bold;
 }
