--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+
+.social-btn-container {
+  
+  width: 100%;
+  height: 200px;
+  display: block;
+  float: right;
+}
+
+.bottom-info {
+  left: 50px;
+}
 .social-btns .btn,
 .social-btns .btn:before,
 .social-btns .btn .fa {
@@ -116,9 +128,10 @@ code {
 }
 
 .footer-container {
+  background-color: #222222;
   padding: 10px;
   width: 100%;
-  background-color: #dddddd;
+  color: white;
   height: 300px;
 }
 
