--- a/src/components/github/Common/paging/paging.css
+++ b/src/components/github/Common/paging/paging.css
@@ -5,8 +5,15 @@
     height: 40px;
     border-radius: 50%;
     cursor: pointer;
-    background-color: #FC6868;
     color: white;
     border: 1px solid black;
     font-weight: bold;
+}
+
+.active {
+    background-color: #CA5353;
+}
+
+.inactive {
+    background-color: #FC6868;
 }
