--- a/src/components/github/Common/paging/paging.css
+++ b/src/components/github/Common/paging/paging.css
@@ -10,6 +10,12 @@
     font-weight: bold;
 }
 
+.page-container:hover {
+    background-color: #CA5353;
+    text-decoration: none;
+    color: white;
+}
+
 .active {
     background-color: #CA5353;
 }
