Added contributions details to full user page.

--- a/src/components/github/Overview/css/overview.css
+++ b/src/components/github/Overview/css/overview.css
@@ -8,6 +8,10 @@
     display: block;
 }
 
+.profile:hover {
+    background-color: #aaaaaa;
+}
+
 .details-container {
     border-radius: 30px;
     color: white;
