Fixed styling of search component.

--- a/src/components/github/Common/searching/search.css
+++ b/src/components/github/Common/searching/search.css
@@ -1,7 +1,7 @@
 .search_container {
     background-color: #222222;
     border-radius: 10px;
-    height: 150px;
+    min-height: 70px;
     padding: 10px;
 }
 
@@ -13,8 +13,17 @@
     max-width: 100px;
 }
 
+.search-btn {
+    height: 40px;
+}
+
 input {
     color: #222222;
     padding: 6px 10px;
     margin: 5px;
+    height: 40px;
+}
+
+.sorting-container {
+    height: 40px;
 }
