--- a/src/components/github/Profile/Repository/css/repositories.css
+++ b/src/components/github/Profile/Repository/css/repositories.css
@@ -9,9 +9,13 @@
 
 .repo-wrapper:hover {
     text-decoration: none;
+    background-color: #eeeeee;
 }
 
 .programming-language-img {
+    border: 1px solid black;
+    margin-top: 10px;
+    top: 50px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
