--- a/src/components/github/FullProfile/css/fullProfile.css
+++ b/src/components/github/FullProfile/css/fullProfile.css
@@ -19,3 +19,9 @@
     color: #222222;
     border-radius: 10px;
 }
+
+.sector-img {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+}
