--- a/src/components/github/FullProfile/css/fullProfile.css
+++ b/src/components/github/FullProfile/css/fullProfile.css
@@ -12,6 +12,7 @@
 }
 
 .analyze-container {
+    padding: 10px;
     background-color: #eeeeee;
     width: 100%;
     min-height: 50px;
@@ -24,4 +25,14 @@
     width: 35px;
     height: 35px;
     border-radius: 50%;
+}
+
+.repo-label {
+    background-color: #222222;
+    color: white;
+    display: inline-block;
+    border-radius: 5px;
+    margin-left: 2px;
+    margin-right: 2px;
+    padding: 5px;
 }
