--- a/src/components/github/FullProfile/css/fullProfile.css
+++ b/src/components/github/FullProfile/css/fullProfile.css
@@ -14,18 +14,23 @@
 .analyze-container {
     padding: 10px;
     width: 100%;
-    height: auto;
+    height: 275px;
     background-repeat: no-repeat;
     background-position: center;
     border: 1px solid #222222;
     color: #222222;
     border-radius: 10px;
+    position: absolute;
+    opacity: 0.5;
+    background-size: 100%;
 }
 
-.analyze-container::after {
-    content: "";
-    opacity: 0.1;
-    filter: alpha(opacity=50);
+.analyze-inner-container {
+    z-index: 1;
+    opacity: 1;
+    width: 100%;
+    position: relative;
+    height: 275px;
 }
 
 .sector-img {
