Added new icon for c#. Changed usernames style in overview.

--- a/src/components/github/Overview/css/overview.css
+++ b/src/components/github/Overview/css/overview.css
@@ -7,10 +7,15 @@
     cursor: pointer;
     display: block;
     background-color: #222222;
+    text-decoration: none !important;
 }
 
 .profile:hover {
     background-color: #282828;
+}
+
+.username {
+    color: white;
 }
 
 .details-container {
