--- a/src/components/github/FullProfile/css/fullProfile.css
+++ b/src/components/github/FullProfile/css/fullProfile.css
@@ -16,13 +16,13 @@
 }
 
 .analyze-main-container {
-    width: 300px;
+    width: 250px;
     margin: auto;
 }
 
 .analyze-container {
     padding: 10px;
-    width: 300px;
+    width: 250px;
     height: 300px;
     background-repeat: no-repeat;
     background-position: center;
@@ -42,6 +42,7 @@
     margin-top: 10px;
     margin-bottom: 20px;
     padding-top: 5px;
+    overflow: auto;
 }
 
 .sector-img {
