Added chart to analyze component

--- a/src/components/github/Overview/css/overview.css
+++ b/src/components/github/Overview/css/overview.css
@@ -32,6 +32,11 @@
     text-align: right;
 }
 
+.analyze-chart-wrapper {
+    width: 200px;
+    height: 200px;
+}
+
 .chart-wrapper {
     display: inline-block;
     width: 50%;
