--- a/src/components/github/FullProfile/css/fullProfile.css
+++ b/src/components/github/FullProfile/css/fullProfile.css
@@ -22,6 +22,12 @@
     background-color: #333333;;
 }
 
+.analyze-main-container-outer {
+    display: inline-block;
+    width: 250px;
+    margin: auto;
+}
+
 .analyze-main-container {
     width: 250px;
     margin: auto;
@@ -41,6 +47,13 @@
     position: absolute;
     opacity: 0.5;
     background-size: 100%;
+}
+
+.analyze-chart {
+    display: inline-block;
+    width: 250px;
+    height: 300px;
+    color: #ffffff;
 }
 
 .analyze-inner-container {
