--- a/src/components/github/github.css
+++ b/src/components/github/github.css
@@ -95,6 +95,10 @@
     margin-bottom: 85px;
 }
 
+.colored-react-chart {
+    background-color: #EAEAEA;
+}
+
 .profile-image {
     max-width: 100px;
     max-height: 100px;
