--- a/src/components/github/FullProfile/tabs/css/fullProfileTabs.css
+++ b/src/components/github/FullProfile/tabs/css/fullProfileTabs.css
@@ -12,13 +12,13 @@
 }
 
 .active {
-    background-color: #CA5353;
+    background-color: #61DAFB;
 }
 
 .inactive {    
-    background-color: #FC6868;
+    background-color: #0291DB;
 }
 
 .full-user-tab-container:hover {
-    background-color: #CA5353;
+    background-color: #61DAFB;
 }
