Added restrictions for username length. Closes #69. Fixed color of second contributor for legend component

--- a/src/components/github/github.css
+++ b/src/components/github/github.css
@@ -137,7 +137,7 @@ span.second-profile-legend {
     display: inline-block;
     width: 30px;
     height: 5px;
-    background-color: #0291DB;
+    background-color: #FC6868;
     margin: auto;
 }
 
