Fixed styling of link of contributors in repository.

--- a/src/components/github/Repository/repository.css
+++ b/src/components/github/Repository/repository.css
@@ -3,11 +3,26 @@
     background-color: #222222;
     border: 1px solid white;
     border-radius: 10px;
-    color: white;
+    color: white !important;
     margin: auto;
 }
 
 .repository-pie-container {
     width: 50%;
     margin: auto;
+}
+
+.repository-contributor-wrapper {
+    border: 1px solid black;
+    margin-top: 10px;
+    border-radius: 5px;
+}
+
+.repository-contributor-link {
+    color: white !important;
+    text-decoration: none !important;
+}
+
+.repository-contributor-wrapper:hover {
+    background-color: #444444;
 }
