Getting total commits, additions and deletions of repository.

--- a/src/components/github/Repository/repository.css
+++ b/src/components/github/Repository/repository.css
@@ -32,6 +32,11 @@
     background-color: #444444;
 }
 
+.contributions-wrapper {
+    border: 1px solid white;
+    border-radius: 10px;
+}
+
 .commits-counter {
     background-color: white;
     color: #222222;
