--- a/src/index.css
+++ b/src/index.css
@@ -228,6 +228,12 @@ p.paragraph {
 
 .dropdown-content-opened {
   display: block;
+  position: absolute;
+  background-color: #222222;
+  margin-top: 5px;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
 
 .nav-link {
