--- a/src/index.css
+++ b/src/index.css
@@ -289,3 +289,16 @@ p.paragraph {
   font-weight: bold;
   text-decoration: none;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px black;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #61DAFB; 
+  border-radius: 10px;
+}
